# Search-Engine

./: Answers.md  CMakeLists.txt  Node.h  Node2.h  OrganizationTree.cpp  OrganizationTree.h  QHtest.cpp  TermsTreeV2.cpp  TermsTreeV2.h  TreeTests.cpp  UserInterface.h  WriterTree.cpp  WriterTree.h  common_lang_constants.h  english_stem.h  handler.h  jsonParser.h  jsonReader.h  main.cpp  parser.h  queryHandler.h  stemming.h  testJSONReader.cpp  test_index.cpp
instructions/: README.md
json_test_case/: test.json
tutorials/: trees.txt
